Add PHP 7.4 imap

--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -37,6 +37,8 @@ RUN chmod +x /usr/local/bin/install-php-extensions && \
     calendar \
     exif \
     gd \
+    iconv \
+	imap \
     intl \
     pdo_mysql \
     pdo_pgsql \
